--- a/mailtemplate/report_abuse.html
+++ b/mailtemplate/report_abuse.html
@@ -4,13 +4,13 @@
                 <td  style="padding:20px 20px 0 20px">
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Dear Admin</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">This Person sent an abuse report.</p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Sender: {LEARNER}.</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Sender: {SENDER}.</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Email Id: {EMAIL_ID}.</p>
                     <br />
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Report About the GIG: {GIG}</p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Tutor: {TUTOR}</p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Tutor Email Id: {TUTOR_EMAIL}</p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Content: {ABUSE_MESSAGE}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">GIG: {GIG}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Abuse Person: {ABUSER}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Email Id: {ABUSER_EMAIL}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">{ABUSE_MESSAGE}</p>
 
                 </td>
             </tr>
