--- a/mailtemplate/gig_booking_learner.html
+++ b/mailtemplate/gig_booking_learner.html
@@ -3,8 +3,9 @@
             <tr>
                 <td  style="padding:20px 20px 0 20px">
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Dear {USERNAME}!</p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">You have a new booking for {TUTOR} for GIG ({GIG}) on {BOOK_DATE}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">You booked one gig on {BOOK_DATE}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;"> Tutor Name : {TUTOR} and GIG : ({GIG}) </p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Booking Time : {FROM_TIME} - {TO_TIME}</p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">In given time, please click the given link : {BOOK_URL} and follow the on screen instruction</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Please click the given link : {BOOK_URL} and follow the on screen instruction</p>
                 </td>
             </tr>
