--- a/mailtemplate/report_abuse.html
+++ b/mailtemplate/report_abuse.html
@@ -7,7 +7,7 @@
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Sender: {SENDER}.</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Email Id: {EMAIL_ID}.</p>
                     <br />
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">GIG: {GIG}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">CAM: {CAM}</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Abuse Person: {ABUSER}</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Email Id: {ABUSER_EMAIL}</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">{ABUSE_MESSAGE}</p>
