--- a/mailtemplate/cam_booking_learner.html
+++ b/mailtemplate/cam_booking_learner.html
@@ -5,7 +5,7 @@
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Dear {USERNAME}!</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">You booked one cam on {BOOK_DATE}</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;"> Tutor Name : {TUTOR} and CAM : ({CAM}) </p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Booking Time : {FROM_TIME} - {TO_TIME}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Session Time : {FROM_TIME} - {TO_TIME}</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Please click the given link : {BOOK_URL} and follow the on screen instruction</p>
                 </td>
             </tr>
