--- a/mailtemplate/cam_booking_tutor.html
+++ b/mailtemplate/cam_booking_tutor.html
@@ -4,6 +4,6 @@
                 <td  style="padding:20px 20px 0 20px">
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Dear {USERNAME}!</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">You have a new booking from {LEARNER} for your CAM ({CAM}) on {BOOK_DATE}</p>
-                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Booking Time : {FROM_TIME} - {TO_TIME}</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Session Time : {FROM_TIME} - {TO_TIME}</p>
                 </td>
             </tr>
