--- a/mailtemplate/cam_purchase_confirmation.html
+++ b/mailtemplate/cam_purchase_confirmation.html
@@ -3,6 +3,7 @@
             <tr>
                 <td  style="padding:20px 20px 0 20px">
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">Dear {USERNAME}!</p>
+                    <p style="color: #545454; font-size: 13px; line-height: 20px;">Order # : {ORDER_ID}!</p>
                     <p style="color: #545454; font-size: 13px; line-height: 20px;">You Purchased {CAM} Cam on {PURCHASE_DATE}</p>
                 </td>
             </tr>
